# plotting-mcp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml  toolhive-deployment.yaml  toolhive-pvc.yaml
.github/: dependabot.yml
.github/workflows/: image-build.yml  lint.yml  main.yml  pr.yml  release.yml  test.yml
scripts/: download_cartopy_data.py
src/plotting_mcp/: configure_logging.py  constants.py  plot.py  server.py  utils.py
tests/: conftest.py  test_plot.py  test_server.py  test_utils.py
