[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plotting-mcp"
version = "0.1.0"
description = "MCP server for generating plots from CSV data"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "anyio>=4.9.0",
    "matplotlib>=3.10.3",
    "mcp[cli]>=1.12.2",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
    "ty>=0.0.1a16",
]

[project.scripts]
plotting-mcp = "plotting_mcp.server:main"

[tool.hatch.build.targets.wheel]
where = ["src/plotting_mcp"]

[tool.ruff]
line-length = 100
target-version = "py313"
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
